refactor: File, Rank 사이 값 구하는 로직의 가독성 개선